# EulerGameReinvented

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  GenerateSolution.bat  README.md
CppVersion/: CMakeLists.txt
CppVersion/source/: AutoComplete.cpp  AutoComplete.h  Box.h  EulerAdventure.cpp  EulerAdventure.h  IButtonHandler.h  IDrawable.h  IHandler.h  ITextHandler.h  InputBox.cpp  InputBox.h  MainLoop.cpp  MainLoop.h  TextBox.cpp  TextBox.h  TextInputHandler.cpp  TextInputHandler.h  Tuna.cpp  Tuna.h  Window.cpp  Window.h  command.h  ecaDefs.h  typedefs.h
CppVersion/source/coretools/: AutoComplete.cpp  IButtonHandler.h  IHandler.h  ITextHandler.h  Mouse.cpp  Options.cpp  Options.h
CppVersion/source/eca/: GameManager.cpp  GameManager.h  TextInputHandler.cpp  TextInputHandler.h
CppVersion/source/gfx/: Box.cpp  Box.h  Button.cpp  Button.h  Field.cpp  Field.h  IDrawable.h  InputBox.h  TextBox.cpp  TextBox.h
CppVersion/source/ioreader/: IOReader.cpp
CppVersion/source/scenes/: Menu.cpp  Menu.h  Tuna.cpp  Tuna.h
JavaVersion/: Basic.java  Description.java  Fraince.java  Item.java  Location.java  Main.java  Screen.java  Sound.java  Student.java  Tuna.java  WelcomeDialog.java
JavaVersion/data/: auftrag.docx  ids.txt
JavaVersion/source/: Character.java  Save.java  SwingUtils.java  Win.java
cmake/modules/: FindFreetype.cmake
source/: CMakeLists.txt  EulerAdventure.cpp  EulerAdventure.h  ecaDefs.h  ecaHelper.cpp  ecaHelper.h
source/coretools/: AutoComplete.cpp  AutoComplete.h  IButtonHandler.h  IHandler.h  ITextHandler.h  Mouse.cpp  Mouse.h  command.h
source/eca/: Euler.cpp  Euler.h  GameManager.cpp  GameManager.h  IEntity.h  Location.cpp  Location.h
source/gfx/: Button.cpp  Button.h  Field.cpp  Field.h  IDrawable.h  InputBox.cpp  InputBox.h  TextBox.cpp  TextBox.h
source/scenes/: Menu.cpp  Menu.h  Tuna.cpp  Tuna.h
